[gd_scene load_steps=33 format=2]

[ext_resource path="res://interfaces/inputs/textures/Keyboard_A.png" type="Texture" id=1]
[ext_resource path="res://interfaces/inputs/textures/Keyboard_S.png" type="Texture" id=2]
[ext_resource path="res://interfaces/inputs/textures/Keyboard_F.png" type="Texture" id=3]
[ext_resource path="res://interfaces/inputs/textures/Keyboard_Arrow_LEFT.png" type="Texture" id=4]
[ext_resource path="res://interfaces/inputs/textures/Keyboard_D.png" type="Texture" id=5]
[ext_resource path="res://interfaces/inputs/Inputs.gd" type="Script" id=6]
[ext_resource path="res://interfaces/inputs/textures/Keyboard_Arrow_UP.png" type="Texture" id=7]
[ext_resource path="res://interfaces/inputs/textures/Keyboard_W_pressed.png" type="Texture" id=8]
[ext_resource path="res://interfaces/inputs/textures/Keyboard_Arrow_UP_pressed.png" type="Texture" id=9]
[ext_resource path="res://interfaces/inputs/textures/Keyboard_D_pressed.png" type="Texture" id=10]
[ext_resource path="res://theme/inputs/inputs.font.tres" type="DynamicFont" id=11]
[ext_resource path="res://interfaces/inputs/textures/Keyboard_W.png" type="Texture" id=12]
[ext_resource path="res://interfaces/inputs/textures/Keyboard_S_pressed.png" type="Texture" id=13]
[ext_resource path="res://interfaces/inputs/textures/Keyboard_A_pressed.png" type="Texture" id=14]
[ext_resource path="res://interfaces/inputs/textures/Keyboard_F_pressed.png" type="Texture" id=15]
[ext_resource path="res://interfaces/inputs/textures/Keyboard_E.png" type="Texture" id=16]
[ext_resource path="res://interfaces/inputs/textures/Keyboard_E_pressed.png" type="Texture" id=17]
[ext_resource path="res://interfaces/inputs/textures/Keyboard_Arrow_LEFT_pressed.png" type="Texture" id=18]
[ext_resource path="res://interfaces/inputs/textures/Keyboard_Arrow_DOWN.png" type="Texture" id=19]
[ext_resource path="res://interfaces/inputs/textures/Keyboard_Arrow_DOWN_pressed.png" type="Texture" id=20]
[ext_resource path="res://interfaces/inputs/textures/Keyboard_Arrow_RIGHT.png" type="Texture" id=21]
[ext_resource path="res://interfaces/inputs/textures/Keyboard_Arrow_RIGHT_pressed.png" type="Texture" id=22]
[ext_resource path="res://interfaces/inputs/textures/Keyboard_Space_pressed.png" type="Texture" id=23]
[ext_resource path="res://interfaces/inputs/textures/Keyboard_Space.png" type="Texture" id=24]
[ext_resource path="res://interfaces/inputs/textures/Keyboard_CTRL.png" type="Texture" id=25]
[ext_resource path="res://interfaces/inputs/textures/Keyboard_SHIFT.png" type="Texture" id=26]
[ext_resource path="res://interfaces/inputs/textures/Keyboard_CTRL_pressed.png" type="Texture" id=27]
[ext_resource path="res://interfaces/inputs/textures/Xbox_one_Y.png" type="Texture" id=28]
[ext_resource path="res://interfaces/inputs/textures/Keyboard_SHIFT_pressed.png" type="Texture" id=29]
[ext_resource path="res://interfaces/inputs/textures/Xbox_one_A.png" type="Texture" id=30]
[ext_resource path="res://interfaces/inputs/textures/Xbox_one_Y_pressed.png" type="Texture" id=31]
[ext_resource path="res://interfaces/inputs/textures/Xbox_one_A_pressed.png" type="Texture" id=32]

[node name="Inputs" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -330.0
margin_bottom = -238.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 150.0
margin_bottom = 32.0
alignment = 1

[node name="Controller" type="MarginContainer" parent="HBoxContainer"]
margin_left = 49.0
margin_right = 49.0
margin_bottom = 32.0

[node name="Keyboard" type="MarginContainer" parent="HBoxContainer/Controller"]
visible = false
margin_right = 16.0
margin_bottom = 32.0

[node name="F" type="CenterContainer" parent="HBoxContainer/Controller/Keyboard"]
margin_right = 16.0
margin_bottom = 32.0

[node name="Normal" type="TextureRect" parent="HBoxContainer/Controller/Keyboard/F"]
margin_top = 8.0
margin_right = 16.0
margin_bottom = 24.0
texture = ExtResource( 3 )

[node name="Pressed" type="TextureRect" parent="HBoxContainer/Controller/Keyboard/F"]
visible = false
margin_top = 8.0
margin_right = 16.0
margin_bottom = 24.0
texture = ExtResource( 15 )

[node name="E" type="CenterContainer" parent="HBoxContainer/Controller/Keyboard"]
visible = false
margin_right = 16.0
margin_bottom = 32.0

[node name="Normal" type="TextureRect" parent="HBoxContainer/Controller/Keyboard/E"]
margin_top = 8.0
margin_right = 16.0
margin_bottom = 24.0
texture = ExtResource( 16 )

[node name="Pressed" type="TextureRect" parent="HBoxContainer/Controller/Keyboard/E"]
visible = false
margin_top = 8.0
margin_right = 16.0
margin_bottom = 24.0
texture = ExtResource( 17 )

[node name="W" type="CenterContainer" parent="HBoxContainer/Controller/Keyboard"]
visible = false
margin_right = 16.0
margin_bottom = 32.0

[node name="Normal" type="TextureRect" parent="HBoxContainer/Controller/Keyboard/W"]
margin_top = 8.0
margin_right = 16.0
margin_bottom = 24.0
texture = ExtResource( 12 )

[node name="Pressed" type="TextureRect" parent="HBoxContainer/Controller/Keyboard/W"]
visible = false
margin_top = 8.0
margin_right = 16.0
margin_bottom = 24.0
texture = ExtResource( 8 )

[node name="A" type="CenterContainer" parent="HBoxContainer/Controller/Keyboard"]
visible = false
margin_right = 16.0
margin_bottom = 32.0

[node name="Normal" type="TextureRect" parent="HBoxContainer/Controller/Keyboard/A"]
margin_top = 8.0
margin_right = 16.0
margin_bottom = 24.0
texture = ExtResource( 1 )

[node name="Pressed" type="TextureRect" parent="HBoxContainer/Controller/Keyboard/A"]
visible = false
margin_top = 8.0
margin_right = 16.0
margin_bottom = 24.0
texture = ExtResource( 14 )

[node name="S" type="CenterContainer" parent="HBoxContainer/Controller/Keyboard"]
visible = false
margin_right = 16.0
margin_bottom = 32.0

[node name="Normal" type="TextureRect" parent="HBoxContainer/Controller/Keyboard/S"]
margin_top = 8.0
margin_right = 16.0
margin_bottom = 24.0
texture = ExtResource( 2 )

[node name="Pressed" type="TextureRect" parent="HBoxContainer/Controller/Keyboard/S"]
visible = false
margin_top = 8.0
margin_right = 16.0
margin_bottom = 24.0
texture = ExtResource( 13 )

[node name="D" type="CenterContainer" parent="HBoxContainer/Controller/Keyboard"]
visible = false
margin_right = 16.0
margin_bottom = 32.0

[node name="Normal" type="TextureRect" parent="HBoxContainer/Controller/Keyboard/D"]
margin_top = 8.0
margin_right = 16.0
margin_bottom = 24.0
texture = ExtResource( 5 )

[node name="Pressed" type="TextureRect" parent="HBoxContainer/Controller/Keyboard/D"]
visible = false
margin_top = 8.0
margin_right = 16.0
margin_bottom = 24.0
texture = ExtResource( 10 )

[node name="Arrow_UP" type="CenterContainer" parent="HBoxContainer/Controller/Keyboard"]
visible = false
margin_right = 16.0
margin_bottom = 32.0

[node name="Normal" type="TextureRect" parent="HBoxContainer/Controller/Keyboard/Arrow_UP"]
visible = false
margin_top = 8.0
margin_right = 16.0
margin_bottom = 24.0
texture = ExtResource( 7 )

[node name="Pressed" type="TextureRect" parent="HBoxContainer/Controller/Keyboard/Arrow_UP"]
margin_top = 8.0
margin_right = 16.0
margin_bottom = 24.0
texture = ExtResource( 9 )

[node name="Arrow_LEFT" type="CenterContainer" parent="HBoxContainer/Controller/Keyboard"]
visible = false
margin_right = 16.0
margin_bottom = 32.0

[node name="Normal" type="TextureRect" parent="HBoxContainer/Controller/Keyboard/Arrow_LEFT"]
margin_top = 8.0
margin_right = 16.0
margin_bottom = 24.0
texture = ExtResource( 4 )

[node name="Pressed" type="TextureRect" parent="HBoxContainer/Controller/Keyboard/Arrow_LEFT"]
margin_top = 8.0
margin_right = 16.0
margin_bottom = 24.0
texture = ExtResource( 18 )

[node name="Arrow_DOWN" type="CenterContainer" parent="HBoxContainer/Controller/Keyboard"]
visible = false
margin_right = 16.0
margin_bottom = 32.0

[node name="Normal" type="TextureRect" parent="HBoxContainer/Controller/Keyboard/Arrow_DOWN"]
margin_top = 8.0
margin_right = 16.0
margin_bottom = 24.0
texture = ExtResource( 19 )

[node name="Pressed" type="TextureRect" parent="HBoxContainer/Controller/Keyboard/Arrow_DOWN"]
margin_top = 8.0
margin_right = 16.0
margin_bottom = 24.0
texture = ExtResource( 20 )

[node name="Arrow_RIGHT" type="CenterContainer" parent="HBoxContainer/Controller/Keyboard"]
visible = false
margin_right = 16.0
margin_bottom = 32.0

[node name="Normal" type="TextureRect" parent="HBoxContainer/Controller/Keyboard/Arrow_RIGHT"]
margin_top = 8.0
margin_right = 16.0
margin_bottom = 24.0
texture = ExtResource( 21 )

[node name="Pressed" type="TextureRect" parent="HBoxContainer/Controller/Keyboard/Arrow_RIGHT"]
margin_top = 8.0
margin_right = 16.0
margin_bottom = 24.0
texture = ExtResource( 22 )

[node name="Space" type="CenterContainer" parent="HBoxContainer/Controller/Keyboard"]
visible = false
margin_right = 80.0
margin_bottom = 32.0

[node name="Normal" type="TextureRect" parent="HBoxContainer/Controller/Keyboard/Space"]
margin_top = 8.0
margin_right = 80.0
margin_bottom = 24.0
texture = ExtResource( 24 )

[node name="Pressed" type="TextureRect" parent="HBoxContainer/Controller/Keyboard/Space"]
margin_left = 8.0
margin_top = 8.0
margin_right = 72.0
margin_bottom = 24.0
texture = ExtResource( 23 )

[node name="CTRL" type="CenterContainer" parent="HBoxContainer/Controller/Keyboard"]
visible = false
margin_right = 21.0
margin_bottom = 32.0

[node name="Normal" type="TextureRect" parent="HBoxContainer/Controller/Keyboard/CTRL"]
margin_top = 8.0
margin_right = 21.0
margin_bottom = 24.0
texture = ExtResource( 25 )

[node name="Pressed" type="TextureRect" parent="HBoxContainer/Controller/Keyboard/CTRL"]
margin_top = 8.0
margin_right = 21.0
margin_bottom = 24.0
texture = ExtResource( 27 )

[node name="Shift" type="CenterContainer" parent="HBoxContainer/Controller/Keyboard"]
visible = false
margin_right = 42.0
margin_bottom = 32.0

[node name="Normal" type="TextureRect" parent="HBoxContainer/Controller/Keyboard/Shift"]
margin_top = 8.0
margin_right = 42.0
margin_bottom = 24.0
texture = ExtResource( 26 )

[node name="Pressed" type="TextureRect" parent="HBoxContainer/Controller/Keyboard/Shift"]
margin_top = 8.0
margin_right = 42.0
margin_bottom = 24.0
texture = ExtResource( 29 )

[node name="Xbox" type="MarginContainer" parent="HBoxContainer/Controller"]
visible = false
margin_right = 16.0
margin_bottom = 32.0

[node name="Y" type="CenterContainer" parent="HBoxContainer/Controller/Xbox"]
margin_right = 16.0
margin_bottom = 32.0

[node name="Normal" type="TextureRect" parent="HBoxContainer/Controller/Xbox/Y"]
margin_top = 8.0
margin_right = 16.0
margin_bottom = 24.0
texture = ExtResource( 28 )

[node name="Pressed" type="TextureRect" parent="HBoxContainer/Controller/Xbox/Y"]
visible = false
margin_top = 8.0
margin_right = 16.0
margin_bottom = 24.0
texture = ExtResource( 31 )

[node name="A" type="CenterContainer" parent="HBoxContainer/Controller/Xbox"]
visible = false
margin_right = 16.0
margin_bottom = 32.0

[node name="Normal" type="TextureRect" parent="HBoxContainer/Controller/Xbox/A"]
margin_top = 8.0
margin_right = 16.0
margin_bottom = 24.0
texture = ExtResource( 30 )

[node name="Pressed" type="TextureRect" parent="HBoxContainer/Controller/Xbox/A"]
visible = false
margin_top = 8.0
margin_right = 16.0
margin_bottom = 24.0
texture = ExtResource( 32 )

[node name="Action" type="Label" parent="HBoxContainer"]
margin_left = 53.0
margin_top = 7.0
margin_right = 101.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 11 )
text = "TALK"

[node name="Timer" type="Timer" parent="."]

[node name="Tween" type="Tween" parent="."]
